Added Inbuilt Directive Demo

--- a/BasicApp/src/app/app.component.html
+++ b/BasicApp/src/app/app.component.html
@@ -14,7 +14,7 @@
   </div>
   <div class="row form-group">
     <div class="col-sm-4">
-      <button type="button" class="btn btn-info" (click)="reverse(str.value)">Reverse</button>
+      <button type="button" class="btn btn-info" [disabled]="true" (click)="reverse(str.value)">Reverse</button>
     </div>    
   </div>
   <div class="row form-group">
