Added Databinding and Component without template.

--- a/InBuiltDirectiveDemo/src/app/app.component.html
+++ b/InBuiltDirectiveDemo/src/app/app.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="row form-group">
     <div class="col">
-      <table class="table table-bordered">
+      <table class="table table-bordered bg-secondary text-white">
         <tr>
           <th>Product Id</th>
           <th>Code</th>
@@ -28,5 +28,10 @@
           Selected Product Is : {{selectedProduct.name}}
         </p>
       </div>
+  </div>
+  <div class="row form-group">
+    <div class="col">
+      <app-message></app-message>
+    </div>
   </div>
 </div>
