--- a/ViewChildDemo/src/app/numeric-operation/numeric-operation.component.html
+++ b/ViewChildDemo/src/app/numeric-operation/numeric-operation.component.html
@@ -22,7 +22,7 @@
             </div>
             <div class="row form-group">
                 <div class="col">
-                    <app-number-util [result]="res"></app-number-util>
+                    <app-number-util [result]="res">Result Is: </app-number-util>
                     <span #result></span>
                 </div>
             </div>
