--- a/ReactiveFormsDemo/src/app/item-entry/item-entry.component.html
+++ b/ReactiveFormsDemo/src/app/item-entry/item-entry.component.html
@@ -1,6 +1,6 @@
 <div class="card-container">
     <div class="card">
-        <div class="card-header bg-dark">
+        <div class="card-header bg-dark text-warning">
             Item Entry
         </div>
         <div class="card-body">
