--- a/HttpClientDemo/src/app/course-list/course-list.component.html
+++ b/HttpClientDemo/src/app/course-list/course-list.component.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col text-right">
-        <a [routerLink]="'/addCourse'" class="btn btn-primary">Add</a>
+        <!-- <a [routerLink]="'/addCourse'" class="btn btn-primary">Add</a> -->
+        <button mat-raised-button color="primary" [routerLink]="'/addCourse'">Add</button>
     </div>
 </div>
 <table class="table table-bordered bg-dark text-info">
