Added Angular Material & DI

--- a/HttpClientDemo/src/app/app.component.html
+++ b/HttpClientDemo/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<app-home></app-home>
+<!-- <div class="container">
   <div class="row">
     <div class="col">
       <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
@@ -7,14 +8,12 @@
     </div>
   </div>
   <div class="row">
-    <div class="col">
-      <!-- <app-course-list></app-course-list> -->
+    <div class="col">      
       <a [routerLink]="'course'" [routerLinkActive]="'active'">Manage Course</a>
     </div>
   </div>
   <div class="row">
-    <div class="col">
-      <!-- <app-course-list></app-course-list> -->      
+    <div class="col">      
       <button mat-button color="warn" [routerLink]="'courseMaterial'" [routerLinkActive]="'active'">Manage Course Material</button>
     </div>
   </div>
@@ -23,4 +22,4 @@
       <router-outlet></router-outlet>
     </div>
   </div>
-</div>
+</div> -->
