--- a/HttpClientDemo/src/app/course-detail/course-detail.component.html
+++ b/HttpClientDemo/src/app/course-detail/course-detail.component.html
@@ -1,3 +1,6 @@
 <div mat-dialog-content>
     <h1>{{data.courseName}}</h1>
 </div>
+<div mat-dialog-action>    
+    <button mat-button color="warn" (click)="close()">Close</button>
+</div>
