--- a/HttpClientDemo/src/app/course-material/course-material.component.html
+++ b/HttpClientDemo/src/app/course-material/course-material.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <mat-form-field>
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
 </mat-form-field>
@@ -46,3 +47,4 @@
   </table>
    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
+</div>
