--- a/HttpClientDemo/src/app/app.component.html
+++ b/HttpClientDemo/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-home></app-home>
+<!-- <app-home></app-home> -->
+<router-outlet></router-outlet>
 <!-- <div class="container">
   <div class="row">
     <div class="col">
