--- a/HttpClientDemo/src/app/course-list/course-list.component.html
+++ b/HttpClientDemo/src/app/course-list/course-list.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col text-right">
         <!-- <a [routerLink]="'/addCourse'" class="btn btn-primary">Add</a> -->
-        <button mat-raised-button color="primary" [routerLink]="'/addCourse'">Add</button>
+        <button mat-raised-button color="primary" [routerLink]="'/home/addCourse'">Add</button>
     </div>
 </div>
 <table class="table table-bordered bg-dark text-info">
@@ -18,8 +18,8 @@
         <td>{{course.courseName}}</td>
         <td>{{course.fees}}</td>
         <td>
-            <a [routerLink]="['/editCourse/',course.id]" class="btn btn-success m-1">Edit</a>
-            <a [routerLink]="['/deleteCourse/',course.id]" class="btn btn-danger m-1">Delete</a>
+            <a [routerLink]="['/home/editCourse/',course.id]" class="btn btn-success m-1">Edit</a>
+            <a [routerLink]="['/home/deleteCourse/',course.id]" class="btn btn-danger m-1">Delete</a>
         </td>
     </tr>
 </table>
