--- a/HttpClientDemo/src/app/course-material/course-material.component.html
+++ b/HttpClientDemo/src/app/course-material/course-material.component.html
@@ -37,8 +37,8 @@
     <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef> Action </th>        
         <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="primary" class="m-1" [routerLink]="['/editCourse/',element.id]">Edit</button>
-                <button mat-raised-button color="warn" class="m-1" [routerLink]="['/deleteCourse/',element.id]">Delete</button>
+                <button mat-raised-button color="primary" class="m-1" [routerLink]="['/home/editCourse/',element.id]">Edit</button>
+                <button mat-raised-button color="warn" class="m-1" [routerLink]="['/home/deleteCourse/',element.id]">Delete</button>
         </td>        
     </ng-container>
   
